# some_script

./: LICENSE  README.md  README_CN.md
document/: script_introduction.md
independent_scripts/ci_cd/: cd.py  ci.py
independent_scripts/ci_cd/utils/: build.py  coverage_report.py  document_generation.py  dynamic_analysis.py  run_test.py  static_analysis.py
independent_scripts/dfa_generate/: bin_to_base64.py  generated.py
independent_scripts/gtest_support/: run_all_suite.sh
src/: cpp_class_generated.py  git_commit_formatting.py  main.py
src/DFA_model/: DFA_model.ini  generated.py
src/build_scripts/: create_library_script.sh
src/build_scripts/googletest-1.12.1/: googletest-1.12.1_build.sh
src/build_scripts/she_log/: she_log_build.sh
src/build_scripts/she_test/: she_test_build.sh
src/cmake_file_generate/: cmake_file_generate.py
src/cmake_module_generate/: 00.py  CMakeLists_generate.py  compilation_options_generate.py  config_generate.py  import_generate.py  project_config_cmake_generate.py  src_build_generate.py  target_exec_generate.py  target_test_generate.py  z_README.md  z_install_generate.py
src/cmake_module_generate/common_cmake_file_generate/: config.ini
src/cpp_project_generate/: 00.py  exec_dir_generate.py  global_test_set_generate.py  scripts_dir_generate.py  src_cpp_generate.py  src_h_generate.py  test_example_generate.py  test_main_generate.py
src/gtest_support/: run_all_suite.sh
src/mock_system_function_generate/: generated.py
src/option/: file.py  o1.py  o2.py  o3.py  o4.py  o5.py  o6.py  o7.py
src/utils/: menu.py
template/: commit_standard.txt  cpp_class.h  sys_func_mock.h
template/cmake/: README.md
template/cmake/basic_grammar/: CMakeLists.txt  main.cpp
template/cmake/macro_test/: CMakeLists.txt  build.sh  main.cpp
template/cmake/minimum_c/: CMakeLists.txt
template/cmake/minimum_cpp/: CMakeLists.txt  main.cpp
template/cmake/modular_organization/: CMakeLists.txt  README.md  README_CN.md  build_1.sh  build_2.sh  build_3.sh  build_gtest.sh
template/cmake/modular_organization/cmake/: build.cmake  import_third_party.cmake  install.cmake  target_other.cmake  target_src.cmake  target_test.cmake
template/cmake/modular_organization/other/: main.cpp
template/cmake/modular_organization/test/: cal.cpp  main.cpp
template/cmake/simple/: CMakeLists.txt
template/cmake/simple/src/: placeholder.cpp  placeholder.h
template/cmake/simple/test/: main.cpp
template/cpp_project/scripts/: build_gtest.sh
template/cpp_project/src/: cal.h
template/cpp_project/test/functional/: functional_sample.cpp
template/cpp_project/test/integration/: integration_sample.cpp
template/cpp_project/test/unit/: unit_sample.cpp
